# UAV_ROS2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custo_msgs/share/custo_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custo_msgs/share/custo_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  custo_msgsConfig.cmake  custo_msgs__rosidl_typesupport_cExport-noconfig.cmake  custo_msgs__rosidl_typesupport_cExport.cmake  custo_msgs__rosidl_typesupport_cppExport-noconfig.cmake  custo_msgs__rosidl_typesupport_introspection_cExport.cmake  custo_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_custo_msgs__rosidl_generator_cExport.cmake  export_custo_msgs__rosidl_generator_pyExport-noconfig.cmake  export_custo_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_custo_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_custo_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/custom_msg/share/custom_msg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_msg/share/custom_msg/cmake/: custom_msgConfig.cmake  (+9 more)
install/drone_drive/share/drone_drive/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/example_pkg/lib/example_pkg/: listener  talker
install/example_pkg/share/example_pkg/: package.bash  package.sh  package.xml  package.zsh
install/my_drone_pkg/share/my_drone_pkg/: package.sh
install/my_robot_pkg/lib/my_robot_pkg/: drone_controller  ps4_controller_node
install/my_robot_pkg/share/my_robot_pkg/: package.bash  package.ps1  package.sh  package.xml  package.zsh
install/ps4_controller/lib/ps4_controller/: ps4_controller_node
install/ps4_controller/share/ps4_controller/: package.bash  package.ps1  package.sh  package.xml  package.zsh
install/uav_controller/lib/uav_controller/: imu_node  pos_controller_node  test_pid_node
install/uav_controller/share/uav_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uav_dynamics/lib/uav_dynamics/: cmd_pub_node  dynamics_node
install/uav_dynamics/share/uav_dynamics/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uav_motor_plugin/share/uav_motor_plugin/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uav_motor_plugin/share/uav_motor_plugin/cmake/: uav_motor_pluginConfig.cmake
install/uav_msgs/share/uav_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uav_msgs/share/uav_msgs/cmake/: ament_cmake_export_libraries-extras.cmake  export_uav_msgs__rosidl_generator_cppExport.cmake  export_uav_msgs__rosidl_generator_pyExport-noconfig.cmake  export_uav_msgs__rosidl_generator_pyExport.cmake  export_uav_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_uav_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  uav_msgs__rosidl_typesupport_cExport-noconfig.cmake  uav_msgs__rosidl_typesupport_cppExport-noconfig.cmake  uav_msgs__rosidl_typesupport_cppExport.cmake  uav_msgs__rosidl_typesupport_introspection_cExport.cmake  uav_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  uav_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/uav_msgs/share/uav_msgs/msg/: UavCmd.idl  UavState.idl
install/uav_sim/lib/uav_sim/: uav_node
install/uav_sim/share/uav_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/custom_msg/: CMakeLists.txt
src/drone/models/: drone_world.world
src/drone_drive/: CMakeLists.txt  package.xml
src/drone_drive/include/drone_drive/: drone_drive.hpp  drone_odometry.hpp
src/drone_drive/src/: drone_drive.cpp  drone_odometry.cpp
src/drone_kinematics/: package.xml  setup.cfg  setup.py
src/drone_kinematics/drone_kinematics/: kinematics_node.py  motor_mixer.py
src/example_pkg/: setup.py
src/example_pkg/example_pkg/: listener.py
src/install/: local_setup.sh  setup.bash  setup.sh
src/launch/: uav_sim.launch.py
src/log/: latest_build
src/models/: uav_world.sdf
src/models/uav/: drone.sdf
src/my_robot_pkg/: package.xml  setup.py
src/my_robot_pkg/config/: view_bot.rviz
src/my_robot_pkg/description/: drone.urdf.xacro  drone_macros.xacro  gazebo_control.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
src/my_robot_pkg/description/install/: local_setup.sh  setup.sh  setup.zsh
src/my_robot_pkg/description/log/: latest_build
src/my_robot_pkg/launch/: drone.launch.py  ps4_init.launch.py  rsp.launch.py
src/my_robot_pkg/my_robot_pkg/: controller_node.py  ps4_drone_node.py
src/my_robot_pkg/worlds/: drone_world.world
src/ps4_controller/: setup.cfg  setup.py
src/ps4_controller/install/: local_setup.sh  setup.ps1  setup.sh
src/ps4_controller/launch/: ps4_servo_launch.py
src/ps4_controller/log/: latest_build
src/ps4_controller/ps4_controller/: ps4_controller.py
src/uav_controller/: CMakeLists.txt
src/uav_controller/include/: controller.hpp  imu_read.hpp  pid_controller.hpp  smc_controller.hpp
src/uav_controller/src/: controller.cpp  imu_read.cpp  pid_controller.cpp  smc_controller.cpp  test_pid.cpp
src/uav_dynamics/: CMakeLists.txt  package.xml
src/uav_dynamics/include/: dynamics_node.hpp  uav_cmd_pub.hpp  uav_model.hpp
src/uav_dynamics/src/: dynamics_node.cpp  uav_cmd_pub.cpp  uav_model.cpp
src/uav_motor_plugin/: CMakeLists.txt
src/uav_motor_plugin/include/: uav_motor_plugin.hpp
src/uav_motor_plugin/src/: uav_motor_plugin.cpp
src/uav_msgs/: CMakeLists.txt
src/uav_msgs/msg/: UavCmd.msg  UavState.msg
src/uav_sim/: CMakeLists.txt
src/uav_sim/include/: show_data.hpp
src/uav_sim/launch/: uav_sim.launch.py
src/uav_sim/models/uav/: drone.sdf  model.config
src/uav_sim/src/: show_data.cpp
(+83 files in other folders)
