<?xml version="1.0"?>
<package format = "3">
    <name>uav_controller</name>
    <version>0.0.1</version>
    <description>UAV controller model</description>

    <maintainer email="huy01092004@gmail.com">Nguyen Huy</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>