<?xml version="1.0"?>
<package format="3">
  <name>uav_motor_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo motor plugin for UAV</description>

  <maintainer email="huy@email.com">Huy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Gazebo -->
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>

  <!-- ROS2 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>uav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
  </export>
</package>
