<package format="3">
  <name>uav_msgs</name>
  <version>0.0.0</version>
  <description>Custom UAV message definitions</description>
  <maintainer email="huy010092004@gmail.com">Huy</maintainer>
  <license>Apache-2.0</license>

  <!-- Quan trọng: thêm dòng này -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
